--- a/src/WebApplication3/wwwroot/index.html
+++ b/src/WebApplication3/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Angular 2 with ASP.NET Core</title>
     <!-- 1. Load libraries -->
-    <link href="libs/css/bootstrap.css" rel="stylesheet" />
+    <link href="libs/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <script src="libs/es6-shim/es6-shim.min.js"></script>
     <script src="libs/zone.js/dist/zone.js"></script>
     <script src="libs/reflect-metadata/Reflect.js"></script>
