--- a/src/WebApplication3/wwwroot/index.html
+++ b/src/WebApplication3/wwwroot/index.html
@@ -9,6 +9,7 @@
     <script src="libs/zone.js/dist/zone.js"></script>
     <script src="libs/reflect-metadata/Reflect.js"></script>
     <script src="libs/systemjs/dist/system.src.js"></script>
+    <script src="libs/rxjs/bundles/Rx.js"></script>
 
 
     <!-- 2. Configure SystemJS -->
