--- a/src/WebApplication3/wwwroot/index.html
+++ b/src/WebApplication3/wwwroot/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <title>Angular 2 with ASP.NET Core</title>
     <!-- 1. Load libraries -->
